# ProjetoRedes

./: CMakeLists.txt  main.c  mpu6050.c  mpu6050.h  tcp.c  tcp.h  thread_wrapper.c  thread_wrapper.h
